force-app/main/default/objects/Campaign/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <formula>DATETIMEVALUE(Start_Date_Time__c + (Duration__c/24))</formula>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>