force-app/main/default/objects/Campaign/fields/Total_Event_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Total_Event_Rewards__c</fullName>
    <description>Cumulative total of all participants rewards</description>
    <label>Total Event Rewards</label>
    <summarizedField>CampaignMember.Reward__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>