force-app/main/default/objects/Campaign/fields/uom_Estimated_Time_of_Restoration__c.field-meta.xml
<CustomField>
    <fullName>uom_Estimated_Time_of_Restoration__c</fullName>
    <label>Estimated Time of Restoration</label>
    <type>DateTime</type>
</CustomField>