force-app/main/default/objects/Campaign/fields/uom_Incident_Id__c.field-meta.xml
<CustomField>
    <fullName>uom_Incident_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident Id</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>