force-app/main/default/objects/Campaign/recordTypes/Tariff_Trial_Event.recordType-meta.xml
<RecordType>
    <fullName>Tariff_Trial_Event</fullName>
    <active>true</active>
    <description>Campaign for tariff trial events such as EV tariff trial</description>
    <label>Tariff Trial Event</label>
</RecordType>