force-app/main/default/objects/Campaign/recordTypes/uom_Ad_hoc.recordType-meta.xml
<RecordType>
    <fullName>uom_Ad_hoc</fullName>
    <active>true</active>
    <label>Ad-hoc</label>
</RecordType>