force-app/main/default/objects/Campaign/recordTypes/uom_Outage.recordType-meta.xml
<RecordType>
    <fullName>uom_Outage</fullName>
    <active>true</active>
    <label>Outage</label>
</RecordType>