force-app/main/default/objects/Campaign/listViews/MyActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>MyActiveCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Duration__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Active Campaigns</label>
</ListView>